Queue item text overflow fixed, play button on pause

--- a/src/comp/Player/CustomPlayer/CustomPlayer.css
+++ b/src/comp/Player/CustomPlayer/CustomPlayer.css
@@ -204,6 +204,22 @@
 
 }
 
+.playVideo{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.205);
+    pointer-events: none;
+    backdrop-filter: blur(5px);
+}
+
 
 .controls-enter {
     opacity: 0;
